# emporium

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
api-client/: Cargo.toml
api-client/src/: adapt.rs  authentication.rs  error.rs  lib.rs  paginate.rs  request.rs  response.rs  retry.rs  timeout.rs  uri.rs
b2-client/: Cargo.toml
b2-client/src/: application.rs  bucket.rs  client.rs  download.rs  errors.rs  file.rs  lib.rs  multi.rs  upload.rs
bookshelf/: Cargo.toml
bookshelf/src/: epoch.rs  expiration.rs  lib.rs
echocache/: Cargo.toml
echocache/src/: lib.rs
formdata/: Cargo.toml
formdata/src/: error.rs  lib.rs  ser.rs
oath/: Cargo.toml  README.md
oath/src/: client.rs  discovery.rs  endpoint.rs  error.rs  lib.rs  pkce.rs  provider.rs  scope.rs  state.rs  token.rs
oath/src/grant/: authorization_code.rs  authorization_url.rs  client_credentials.rs  device_code.rs  mod.rs  pending.rs  refresh.rs
oath/src/server/: config.rs  error.rs  handlers.rs  identity.rs  mod.rs  session.rs  storage.rs  users.rs
oath/tests/: device_flow.rs  discovery.rs  login_flow.rs  oauth2_client.rs  server_login.rs
oath/tests/common/: mod.rs
ott/: .env.example  .gitignore  Cargo.toml  README.md  ott.toml.example
ott/src/: auth.rs  config.rs  embed.rs  handlers.rs  main.rs  state.rs  templates.rs  user.rs
ott/static/: app.css
ott/templates/: base.html.j2  error.html.j2  home.html.j2  profile.html.j2
otunnel/: Cargo.toml  README.md  config.toml
otunnel/src/: auth.rs  config.rs  cookies.rs  main.rs  proxy.rs  state.rs  user.rs
secret/: Cargo.toml
secret/src/: lib.rs
services/b2-client/: Cargo.toml
services/b2-client/src/: application.rs  bucket.rs  client.rs  download.rs  errors.rs  file.rs  multi.rs  upload.rs
services/linode/: Cargo.toml
services/linode/src/: lib.rs
services/mailgun/: Cargo.toml
services/mailgun/examples/: simple.rs
services/mailgun/src/: error.rs  lib.rs  mail.rs
services/octocat/: Cargo.toml
services/octocat/examples/: fetch-commit.rs
services/octocat/src/: config.rs  lib.rs
services/octocat/src/models/: commits.rs  mod.rs
services/octocat/test/: expected_token.txt  rsa-2048-private-key.pk8
services/onepassword/: Cargo.toml
services/onepassword/src/: client.rs  lib.rs  secrets.rs
services/onepassword/src/models/: items.rs  mod.rs  vaults.rs
services/registry/: Cargo.toml  README.md
services/registry/examples/: basic_server.rs
services/registry/src/: api.rs  blob.rs  error.rs  lib.rs  main.rs  manifest.rs  storage.rs
services/registry/tests/: integration.rs
services/tailscale/: Cargo.toml
services/tailscale/src/: client.rs  error.rs  lib.rs
storage/: Cargo.toml
storage-driver/: Cargo.toml
storage-driver/src/: driver.rs  error.rs  lib.rs
storage/src/: lib.rs  local.rs  memory.rs  multi.rs  temp.rs
