[workspace]
resolver = "2"
members = [
    "api-client",
    "services/b2-client",
    "bookshelf",
    "echocache",
    "secret",
    "storage",
    "storage-driver",
    "services/linode",
    "services/octocat",
    "services/tailscale",
]

[workspace.dependencies]
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
camino = { version = "1", features = [] }
chrono = { version = "0.4", features = [] }
dashmap = "6"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
http = "1"
http-body = "1"
http-body-util = "*"
hyper = "1"
jaws = { version = "1.0.1", features = ["rand", "spki", "der"] }
indoc = "2"
mime = "0.3"
parking_lot = "0.12"
percent-encoding = "2"
pin-project = "1"
sentry = { version = "0.40.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = "0.10"
sha2 = "0.10"
static_assertions = "1"
tempfile = "3"
thiserror = "2"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["set-header"] }
tracing = "0.1"
url = "2"
yacme = { version = "5.0.0-rc.2" }
zeroize = "1"

[workspace.dependencies.hyperdriver]
version = "0.11"
features = ["stream", "tls", "server", "client", "incoming", "sni"]

[workspace.dependencies.tokio]
version = "1"
default-features = false
features = ["io-util", "fs", "rt"]

[workspace.dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
