[workspace]
resolver = "2"
members = [
    "api-client",
    "services/b2-client",
    "bookshelf",
    "echocache",
    "secret",
    "storage",
    "storage-driver",
    "services/linode",
    "services/octocat",
    "services/tailscale", "services/onepassword", "services/registry", "oath",
    "ott", "otunnel",
]

[workspace.dependencies]
arc-swap = "1"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12", default-features = false }
base64 = "0.22"
cookie = "0.18"
bytes = "1"
camino = { version = "1", features = [] }
chateau = { version = "0.3" }
chrono = { version = "0.4", features = [] }
chrono-tz = "0.10.4"
config = { version = "0.15.19", features = ["toml", "json"] }
clap = { version = "*", features = ["derive"]}
dashmap = "6"
data-encoding = "2.10.0"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
http = "1"
http-body = "1"
http-body-util = "*"
hyper = "1"
hyproxy = "*"
jaws = { version = "1.0.3", features = ["rand", "spki", "der"] }
indoc = "2"
minijinja = { version = "2", features = ["loader"] }
mime = "0.3"
mime_guess = "2.0.5"
parking_lot = "0.12"
percent-encoding = "2"
pin-project = "1"
rand = "0.9"
rust-embed = "8.11.0"
sentry = { version = "0.46.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = "0.10"
sha2 = "0.10"
static_assertions = "1"
tempfile = "3"
toml = "0.8"
thiserror = "2"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["set-header"] }
tracing = "0.1"
tracing-error = "0.2"
uuid = { version = "1", features = ["v4"] }
url = "2"
yacme = { version = "5.0.1" }
zeroize = "1"

[workspace.dependencies.hyperdriver]
version = "0.12.3"
features = ["stream", "tls", "server", "client", "incoming", "sni"]

[workspace.dependencies.tokio]
version = "1"
default-features = false
features = ["io-util", "fs", "rt"]

[workspace.dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
