[package]
name = "api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyperdriver.workspace = true
pin-project.workspace = true
secret.path = "../secret"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["retry"] }
tracing.workspace = true
zeroize.workspace = true
