[package]
name = "api-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arc-swap.workspace = true
base64.workspace = true
bytes.workspace = true
camino.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyperdriver.workspace = true
pin-project.workspace = true
secret.path = "../secret"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["retry"] }
tracing.workspace = true

[dev-dependencies]
hyperdriver = { workspace = true, features = ["tls-ring"] }
