[package]
name = "api-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arc-swap.workspace = true
base64.workspace = true
bytes.workspace = true
camino.workspace = true
futures.workspace = true
http-body.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper.workspace = true
hyperdriver.workspace = true
pin-project.workspace = true
secret.path = "../secret"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["retry"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
hyperdriver = { workspace = true, features = ["tls-ring"] }

[lints]
workspace = true
