[package]
name = "ott"
version = "0.1.0"
edition = "2024"
description = "OAuth Test Tool — a reference axum app for the oath crate"
publish = false

[dependencies]
axum.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
