[package]
name = "otunnel"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
async-trait.workspace = true
axum.workspace = true
chateau = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
config.workspace = true
cookie.workspace = true
dashmap.workspace = true
data-encoding.workspace = true
eyre.workspace = true
http.workspace = true
hyper.workspace = true
hyproxy.workspace = true
hyperdriver = { workspace = true}
oath = { path = "../oath", features = ["server"] }
secret.path = "../secret"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["trace", "catch-panic", "sensitive-headers", "request-id", "propagate-header"] }
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
tls-ring = ["hyperdriver/tls-ring"]
tls-aws-lc = ["hyperdriver/tls-aws-lc"]

[dev-dependencies]
hyperdriver = { workspace = true, features = ["tls-ring"] }

[lints]
workspace = true
