[package]
name = "storage-driver"
version = "0.9.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait.workspace = true
camino.workspace = true
chrono.workspace = true
http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
