[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
b2-client.path = "../b2-client"
camino = { workspace = true, features = ["serde1"] }
chrono.workspace = true
eyre.workspace = true
http.workspace = true
serde.workspace = true
storage-driver.path = "../storage-driver"
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing.workspace = true
tempfile = { workspace = true, optional = true }

[features]
default = ["b2", "local"]
b2 = []
local = ["tokio/fs"]
tmp = ["tokio/fs"]
