[package]
name = "registry"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum.workspace = true
bytes.workspace = true
camino.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tower.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1"] }
hyperdriver.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
