[package]
name = "registry"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "registry-server"
path = "src/main.rs"
required-features = ["cli", "tls-aws-lc"]

[dependencies]
axum.workspace = true
b2-client = { path = "../b2-client", optional = true }
bytes.workspace = true
camino.workspace = true
clap = { version = "4.6.1", features = ["derive"], optional = true }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage = { path = "../../storage" }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
toml_edit = { version = "0.25.11", features = ["serde"], optional = true }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[features]
tls-ring = ["storage/tls-ring"]
tls-aws-lc = ["storage/tls-aws-lc"]
b2 = ["dep:b2-client"]
onepassword = ["b2-client/onepassword"]
cli = ["tokio/macros", "tokio/rt-multi-thread", "dep:clap", "dep:toml_edit", "dep:tracing-subscriber"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1"] }
hyperdriver.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["b2-client"]
