[package]
name = "tailscale"
version = "0.9.0"
edition = "2021"
license = "MIT"

[dependencies]
api-client.path = "../../api-client"
camino.workspace = true
http.workspace = true
hyperdriver.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true

[features]
tls-ring = ["api-client/tls-ring"]
tls-aws-lc = ["api-client/tls-aws-lc"]

[dev-dependencies]
indoc.workspace = true


[lints]
workspace = true
